--- a/docs/_includes/color/red.html
+++ b/docs/_includes/color/red.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(348, 100%, 61%);"></span>
+<span class="bd-color" style="background: hsl(348, 100%, 61%);"></span>
 <code>hsl(348, 100%, 61%)</code>
