--- a/docs/_includes/color/turquoise.html
+++ b/docs/_includes/color/turquoise.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(171, 100%, 41%);"></span>
+<span class="bd-color" style="background: hsl(171, 100%, 41%);"></span>
 <code>hsl(171, 100%, 41%)</code>
