--- a/docs/_includes/features.html
+++ b/docs/_includes/features.html
@@ -439,7 +439,7 @@
       <div class="column is-10">
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/form/general/">
                 Form
               </a>
@@ -452,7 +452,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/elements/box/">
                 Box
               </a>
@@ -465,7 +465,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/elements/button/">
                 Button
               </a>
@@ -478,7 +478,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/elements/notification/">
                 Notification
               </a>
@@ -491,7 +491,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/elements/progress/">
                 Progress bar
               </a>
@@ -504,7 +504,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/elements/tag/">
                 Tags
               </a>
@@ -528,7 +528,7 @@
       <div class="column is-10">
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/components/card/">
                 Card
               </a>
@@ -541,7 +541,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/components/dropdown/">
                 Dropdown
               </a>
@@ -554,7 +554,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/components/message/">
                 Message
               </a>
@@ -567,7 +567,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/components/pagination/">
                 Pagination
               </a>
@@ -580,7 +580,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/components/tabs/">
                 Tabs
               </a>
@@ -593,7 +593,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/components/media-object/">
                 Media object
               </a>
@@ -606,7 +606,7 @@
 
         <div class="columns">
           <div class="column is-3">
-            <h4 class="subtitle is-4 feature-title">
+            <h4 class="subtitle is-4 bd-feature-title">
               <a href="{{ site.url }}/documentation/components/menu/">
                 Menu
               </a>
