--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -65,7 +65,7 @@
               </p>
               {{#unless site.deprecated}}
                 <small>
-                  <a class="view-all-versions" href="/versions">View all versions</a>
+                  <a class="bd-view-all-versions" href="/versions">View all versions</a>
                 </small>
               {{/unless}}
             </div>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="level-right">
                   <div class="level-item">
-                    <a class="button is-rss is-small" href="{{ site.url }}/atom.xml">
+                    <a class="button bd-is-rss is-small" href="{{ site.url }}/atom.xml">
                       <span class="icon is-small">
                         <i class="fa fa-rss"></i>
                       </span>
@@ -142,11 +142,11 @@
         </div>
       </div>
       <a class="navbar-item {% if page.route == 'expo' %}is-active{% endif %}" href="{{ site.url }}/expo/">
-        <span class="emoji">🎨</span>
+        <span class="bd-emoji">🎨</span>
         Expo
       </a>
       <a class="navbar-item {% if page.route == 'love' %}is-active{% endif %}" href="{{ site.url }}/love/">
-        <span class="emoji">❤️</span>
+        <span class="bd-emoji">❤️</span>
         Love
       </a>
     </div>
