--- a/docs/_includes/pro.html
+++ b/docs/_includes/pro.html
@@ -1,4 +1,4 @@
-<article class="media pro is-{{ include.type }}">
+<article class="media bd-pro is-{{ include.type }}">
   <aside class="media-left">
     <span class="icon">
       <i class="fa fa-{{ include.icon }}"></i>
@@ -8,7 +8,7 @@
     <p class="title is-5 pro-title">
       {{ include.title }}
     </p>
-    <div class="pro-content">
+    <div class="bd-pro-content">
       {{ include.content | markdownify }}
     </div>
   </div>
