--- a/docs/_includes/tw.html
+++ b/docs/_includes/tw.html
@@ -1,27 +1,27 @@
 {% assign twUrl = "https://twitter.com/" | append: include.username | append: "/status/" | append: include.id %}
 
-<article class="tw">
-  <header class="tw-header">
-    <a class="tw-author" href="{{ twUrl }}" target="_blank">
-      <figure class="tw-avatar">
+<article class="bd-tw">
+  <header class="bd-tw-header">
+    <a class="bd-tw-author" href="{{ twUrl }}" target="_blank">
+      <figure class="bd-tw-avatar">
         <img src="{{ include.avatar }}">
       </figure>
-      <div class="tw-name">
-        <strong class="tw-fullname">
+      <div class="bd-tw-name">
+        <strong class="bd-tw-fullname">
           {{ include.fullname }}
         </strong>
-        <span class="tw-username">
+        <span class="bd-tw-username">
           @{{ include.username }}
         </span>
       </div>
     </a>
   </header>
 
-  <div class="tw-content">
+  <div class="bd-tw-content">
     {{ include.content }}
   </div>
 
-  <p class="tw-date">
+  <p class="bd-tw-date">
     <a href="{{ twUrl }}" target="_blank">
       {{ include.date }}
     </a>
