--- a/docs/_includes/tws.html
+++ b/docs/_includes/tws.html
@@ -75,9 +75,9 @@
     </div>
   </div>
 
-  <div class="more-loves">
-    <p class="more-loves-container">
-      <a class="button is-medium is-danger rainbow" href="{{ site.url }}/love/">
+  <div class="bd-more-loves">
+    <p class="bd-more-loves-container">
+      <a class="button is-medium is-danger bd-rainbow" href="{{ site.url }}/love/">
         <span>See more <strong>love</strong> 🤗</span>
       </a>
     </p>
