--- a/docs/_sass/bootstrap.sass
+++ b/docs/_sass/bootstrap.sass
@@ -1,7 +1,7 @@
 $bootstrap: #6f5499
 $bootstrap-invert: #fff
 
-.bootstrap
+.bd-bootstrap
   .hero
     background-color: $bootstrap
     color: $bootstrap-invert
@@ -16,49 +16,49 @@ $bootstrap-invert: #fff
       &:hover
         color: $bootstrap-invert
 
-.pros-heading
+.bd-pros-heading
   padding: 0 2rem
   text-align: center
 
-.pros-icon
+.bd-pros-icon
   margin-bottom: 3rem
   text-align: center
   svg
     height: 3rem
     width: auto
 
-.pros-list
+.bd-pros-list
   margin: 0 auto
   max-width: 540px
 
-.pro
+.bd-pro
   .icon
     position: relative
     top: -1px
   .title
     margin-bottom: 0.5rem
 
-.pro + .pro
+.bd-pro + .pro
   margin-top: 2rem
   padding-top: 2rem
 
-.pro-content
+.bd-pro-content
   p:not(:last-child)
     margin-bottom: 0.5rem
 
-.pro.is-bulma
+.bd-pro.is-bulma
   .icon
     color: $primary
 
-.pro.is-bootstrap
+.bd-pro.is-bootstrap
   .icon
     color: $bootstrap
 
-.separator
+.bd-separator
   color: $border
   margin: 0 0.25em
 
-.comparison
+.bd-comparison
   margin: 0 auto
   max-width: 42rem
   .table
@@ -93,5 +93,5 @@ $bootstrap-invert: #fff
       color: $text-strong
       font-weight: $weight-bold
 
-.comparison-header
+.bd-comparison-header
   margin-bottom: 3rem
