--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -1,5 +1,5 @@
-.example,
-.structure
+.bd-example,
+.bd-structure
   border: 1px solid $warning
   border-top-right-radius: $radius
   color: $warning-invert
@@ -29,7 +29,7 @@
       border-right: none
       padding: 0
 
-.example
+.bd-example
   & + .highlight
     border: 1px solid $warning
     border-radius: 0 0 $radius $radius
@@ -53,7 +53,7 @@
 $structure: $danger
 $structure-invert: $danger-invert
 
-.structure
+.bd-structure
   border-color: $structure
   border-radius: $radius
   padding: 1.5rem
@@ -62,7 +62,7 @@ $structure-invert: $danger-invert
     color: $structure-invert
     content: "Structure"
 
-.structure-item
+.bd-structure-item
   position: relative
   &:before
     +overlay
@@ -82,7 +82,7 @@ $structure-invert: $danger-invert
     justify-content: center
     padding: 3px 5px
     z-index: 2
-  &.is-structure-container
+  &.bd-is-structure-container
     padding: 1.5rem 0.75rem 0.75rem
     &:after
       align-items: flex-start
@@ -114,7 +114,7 @@ $structure-invert: $danger-invert
       white-space: pre-wrap
 
 +tablet
-  .section:not(.is-fullwidth) > .example:not(.is-fullwidth)
+  .section:not(.is-fullwidth) > .bd-example:not(.is-fullwidth)
     margin-left: 1.5rem
     margin-right: 1.5rem
     & + .highlight
@@ -123,7 +123,7 @@ $structure-invert: $danger-invert
 
 .section.is-fullwidth
   padding: 0 !important
-  .example
+  .bd-example
     border-left: none
     border-radius: 0
     border-right: none
