--- a/docs/_sass/expo.sass
+++ b/docs/_sass/expo.sass
@@ -1,49 +1,49 @@
-.expo
+.bd-expo
   background-color: $background
   background-color: $white
   padding: 1.5rem
 
-.website
+.bd-website
   display: block
   position: relative
   text-align: center
   &:last-child
     margin-bottom: 0
 
-.website-image
+.bd-website-image
   align-items: center
   display: flex
   justify-content: center
   margin-bottom: 1.5rem
   position: relative
   &:hover
-    .website-overlay
+    .bd-website-overlay
       opacity: 0.25
 
-.website-overlay
+.bd-website-overlay
   background-color: $black
   opacity: 0
   transition: opacity 200ms $easing
 
 +mobile
-  .website:not(:last-child)
+  .bd-website:not(:last-child)
     margin-bottom: 1.5rem
 
 +tablet
-  .expo
+  .bd-expo
     padding-bottom: 3rem
     padding-top: 3rem
-  .websites
+  .bd-websites
     display: flex
     flex-wrap: wrap
     justify-content: space-between
-  .website
+  .bd-website
     margin-top: 3rem
     width: calc(50% - 3rem)
     &:nth-child(1),
     &:nth-child(2)
       margin-top: 0
-    &.is-highlighted
+    &.bd-is-highlighted
       width: 100%
-  .website-image
+  .bd-website-image
     margin-bottom: 3rem
