--- a/docs/_sass/header.sass
+++ b/docs/_sass/header.sass
@@ -6,7 +6,7 @@
     border-color: $github
     color: $white
 
-.tw-button
+.bd-tw-button
   background-color: $twitter
   color: $white
   border-color: transparent !important
