--- a/docs/_sass/love.sass
+++ b/docs/_sass/love.sass
@@ -1,15 +1,15 @@
-.testimonials
+.bd-testimonials
   background-color: $background
 
-.testimonial
+.bd-testimonial
   align-items: flex-start
   display: flex
   justify-content: center
 
-.testimonial-tweet
+.bd-testimonial-tweet
   background-color: $white
 
-.more-loves
+.bd-more-loves
   align-items: center
   display: flex
   justify-content: center
@@ -26,35 +26,35 @@
         transform: scale(1.04)
 
 +mobile
-  .testimonials
+  .bd-testimonials
     padding: 1.5rem
-  .testimonial
+  .bd-testimonial
     margin-bottom: 1.5rem
 
 +tablet
-  .testimonials
+  .bd-testimonials
     padding: 3rem
-  .testimonial + .testimonial
+  .bd-testimonial + .bd-testimonial
     margin-top: 1.5rem
 
 +desktop
-  .testimonials
+  .bd-testimonials
     min-height: 595px
 
 +widescreen
-  .testimonials
+  .bd-testimonials
     min-height: 653px
 
 +fullhd
-  .testimonials
+  .bd-testimonials
     min-height: 632px
 
-.rainbow
+.bd-rainbow
   animation: rainbow 8s ease infinite
   background-image: linear-gradient(124deg, $orange, $red, $purple, $blue)
   background-size: 800% 800%
 
-.hero.is-love
+.hero.bd-is-love
   .title,
   .subtitle
     color: $white
@@ -67,35 +67,35 @@
     100%
       background-position: 0% 80%
 
-.hug
+.bd-hug
   align-items: flex-start
   display: flex
   justify-content: center
 
-.embrace
+.bd-embrace
   background-color: $background
   border-radius: $radius
   padding: 1.5rem
 
 +mobile
-  .love
+  .bd-love
     padding: 1.5rem
-  .hug
+  .bd-hug
     margin: 1.5rem
-  .embrace
+  .bd-embrace
     text-align: center
     &:not(:first-child)
       margin-top: 1.5rem
     &:not(:last-child)
       margin-bottom: 1.5rem
-  .embrace-button
+  .bd-embrace-button
     margin-top: 0.75rem
 
 +tablet
-  .love
+  .bd-love
     padding-bottom: 3rem
     padding-top: 3rem
-  .embrace
+  .bd-embrace
     align-items: center
     display: flex
     justify-content: center
@@ -103,13 +103,13 @@
       margin-top: 3rem
     &:not(:last-child)
       margin-bottom: 3rem
-  .embrace-button
+  .bd-embrace-button
     margin-left: 1.5rem
-  .hugs
+  .bd-hugs
     display: flex
     flex-wrap: wrap
     padding-bottom: 3rem
-  .hug
+  .bd-hug
     margin-top: 1.5rem
     width: calc(33.3333% - 1rem)
     &:nth-child(1),
