--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -3,7 +3,7 @@
     td:nth-child(2)
       width: 320px
 
-.color
+.bd-color
   border-radius: 2px
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(0, 0, 0, 0.1)
   display: inline-block
@@ -12,7 +12,7 @@
   margin-right: 8px
   width: 24px
 
-.button.is-rss
+.button.bd-is-rss
   background-color: #f26522
   border-color: transparent
   color: #fff
@@ -21,12 +21,12 @@
   &:active
     background-color: darken(#f26522, 10%)
 
-.view-all-versions
+.bd-view-all-versions
   color: $text-light
   &:hover
     text-decoration: underline
 
-.feature-title
+.bd-feature-title
   color: $text-light
   a
     border-bottom: 1px solid transparent
@@ -34,20 +34,20 @@
     &:hover
       border-bottom-color: $primary
 
-.anchor-title
+.bd-anchor-title
   padding-top: 1.5rem
   position: relative
   +until($widescreen)
     padding-left: 2rem
 
-.anchor-link
+.bd-anchor-link
   position: absolute
   right: calc(100% + 1rem)
   +until($widescreen)
     left: 0
     right: auto
 
-.article-image
+.bd-article-image
   background-color: $primary
   display: block
   height: 240px
@@ -64,19 +64,19 @@
   &.is-orange
     background-color: $orange
   &:hover
-    .article-overlay
+    .bd-article-overlay
       opacity: 0.25
-    .article-icon
+    .bd-article-icon
       transform: scale(1.4)
-    .article-date
+    .bd-article-date
       transform: scale(0.9)
-    .article-title
+    .bd-article-title
       transform: scale(1.1)
   &.is-single
     margin-bottom: 2rem
     width: 100%
 
-.article-overlay
+.bd-article-overlay
   +overlay
   background-color: $black
   opacity: 0
@@ -84,21 +84,21 @@
   transition-property: opacity
   transition-timing-function: $easing
 
-.article-icon,
-.article-info
+.bd-article-icon,
+.bd-article-info
   +overlay
   align-items: center
   display: flex
   justify-content: center
 
-.article-icon,
-.article-date,
-.article-title
+.bd-article-icon,
+.bd-article-date,
+.bd-article-title
   transition-duration: $speed
   transition-property: transform
   transition-timing-function: $easing
 
-.article-icon
+.bd-article-icon
   color: $black
   opacity: 0.25
   & > span
@@ -106,14 +106,14 @@
   .fa
     font-size: 56px
 
-.article-info
+.bd-article-info
   padding: 20px
 
-.article-date
+.bd-article-date
   color: rgba(#000, 0.5)
   display: block
 
-.article-title
+.bd-article-title
   color: $white
   display: block
   font-size: 2.5rem
@@ -121,6 +121,6 @@
   line-height: 1.25
   padding: 0 20px
 
-.emoji
+.bd-emoji
   margin-right: 0.5em
   margin-top: 2px
