--- a/docs/_sass/twitter.sass
+++ b/docs/_sass/twitter.sass
@@ -2,14 +2,14 @@ $tw-black: #1c2022
 $tw-blue: #2b7bb9
 $tw-grey: #697882
 
-.tws
+.bd-tws
   background-color: $background
   display: flex
   flex-wrap: wrap
   overflow: auto
   padding: 20px
 
-.tw
+.bd-tw
   background-color: #fff
   border: 1px solid #e1e8ed
   border-radius: 5px
@@ -19,12 +19,12 @@ $tw-grey: #697882
   font-size: 16px
   padding: 20px
 
-.tw-header
+.bd-tw-header
   align-items: stretch
   display: flex
   justify-content: flex-start
 
-.tw-author
+.bd-tw-author
   align-items: center
   color: $tw-black
   display: flex
@@ -32,7 +32,7 @@ $tw-grey: #697882
   &:hover
     color: $tw-blue
 
-.tw-avatar
+.bd-tw-avatar
   flex-shrink: 0
   height: 36px
   margin-right: 9px
@@ -43,18 +43,18 @@ $tw-grey: #697882
     height: 36px
     width: 36px
 
-.tw-fullname
+.bd-tw-fullname
   color: currentColor
   display: block
   font-size: 16px
   font-weight: 700
 
-.tw-username
+.bd-tw-username
   color: $tw-grey
   display: block
   font-size: 14px
 
-.tw-content
+.bd-tw-content
   color: $tw-black
   font-size: 16px
   line-height: 1.4
@@ -67,7 +67,7 @@ $tw-grey: #697882
     vertical-align: -.2em
     width: 1.25em
 
-.tw-date
+.bd-tw-date
   font-size: 14px
   line-height: 1.4
   margin-top: 3.2px
@@ -126,27 +126,27 @@ $tw-grey: #697882
   background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23657786%22%20d%3D%22M12%2021.638h-.014C9.403%2021.59%201.95%2014.856%201.95%208.478c0-3.064%202.525-5.754%205.403-5.754%202.29%200%203.83%201.58%204.646%202.73.813-1.148%202.353-2.73%204.644-2.73%202.88%200%205.404%202.69%205.404%205.755%200%206.375-7.454%2013.11-10.037%2013.156H12zM7.354%204.225c-2.08%200-3.903%201.988-3.903%204.255%200%205.74%207.035%2011.596%208.55%2011.658%201.52-.062%208.55-5.917%208.55-11.658%200-2.267-1.822-4.255-3.902-4.255-2.528%200-3.94%202.936-3.952%202.965-.23.562-1.156.562-1.387%200-.015-.03-1.426-2.965-3.955-2.965z%22%2F%3E%3C%2Fsvg%3E)
 
 +mobile
-  .tws
+  .bd-tws
     padding: 1.5rem
-  .tw
+  .bd-tw
     margin-bottom: 1.5rem
 
 +tablet
-  .tws
+  .bd-tws
     padding: 3rem
-  .tw + .tw
+  .bd-tw + .bd-tw
     margin-top: 1.5rem
 
 +desktop
-  .tws
+  .bd-tws
     min-height: 595px
 
 +widescreen
-  .tws
+  .bd-tws
     min-height: 653px
 
 +fullhd
-  .tws
+  .bd-tws
     min-height: 632px
 
 .twitter-tweet:not(.twitter-tweet-rendered)
