--- a/docs/documentation/components/breadcrumb.html
+++ b/docs/documentation/components/breadcrumb.html
@@ -160,7 +160,7 @@ variables:
     </div>
 
     <hr>
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_example}}
     </div>
 
@@ -174,14 +174,14 @@ variables:
     </div>
 
 
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_centered_example}}
     </div>
 
 
     {% highlight html %}{{breadcrumb_centered_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_right_example}}
     </div>
 
@@ -195,7 +195,7 @@ variables:
       <p>You can use any of the <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a> <strong>icons</strong>.</p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_icons_example}}
     </div>
 
@@ -208,25 +208,25 @@ variables:
       <p>You can choose between <strong>4 additional separators</strong>: <code>has-arrow-separator</code> <code>has-bullet-separator</code> <code>has-dot-separator</code> and <code>has-succeeds-separator</code>.</p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_arrow_example}}
     </div>
 
     {% highlight html %}{{breadcrumb_arrow_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_bullet_example}}
     </div>
 
     {% highlight html %}{{breadcrumb_bullet_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_dot_example}}
     </div>
 
     {% highlight html %}{{breadcrumb_dot_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_succeeds_example}}
     </div>
 
@@ -238,19 +238,19 @@ variables:
       <p>You can choose between <strong>3 additional sizes</strong>: <code>is-small</code> <code>is-medium</code> and <code>is-large</code>.</p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_small_example}}
     </div>
 
     {% highlight html %}{{breadcrumb_small_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_medium_example}}
     </div>
 
     {% highlight html %}{{breadcrumb_medium_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{breadcrumb_large_example}}
     </div>
 
