--- a/docs/documentation/components/media-object.html
+++ b/docs/documentation/components/media-object.html
@@ -23,14 +23,14 @@ doc-subtab: media-object
       <p>The <a href="http://www.stubbornella.org/content/2010/06/25/the-media-object-saves-hundreds-of-lines-of-code">media object</a> is a UI element perfect for repeatable and nestable content.</p>
     </div>
 
-    <div class="structure">
+    <div class="bd-structure">
       <article class="media">
-        <figure class="media-left structure-item" title="media-left">
+        <figure class="media-left bd-structure-item" title="media-left">
           <p class="image is-64x64">
             <img src="{{site.url}}/images/placeholders/128x128.png">
           </p>
         </figure>
-        <div class="media-content structure-item is-structure-right" title="media-content">
+        <div class="media-content bd-structure-item bd-is-structure-right" title="media-content">
           <div class="content">
             <p>
               <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
@@ -52,7 +52,7 @@ doc-subtab: media-object
             </div>
           </nav>
         </div>
-        <div class="media-right structure-item" title="media-right">
+        <div class="media-right bd-structure-item" title="media-right">
           <button class="delete"></button>
         </div>
       </article>
@@ -92,7 +92,7 @@ doc-subtab: media-object
   </div>
 </article>
 {% endcapture %}
-<div class="example">
+<div class="bd-example">
 {{media_example}}
 </div>
 {% highlight html %}
@@ -133,7 +133,7 @@ doc-subtab: media-object
   </div>
 </article>
 {% endcapture %}
-<div class="example">
+<div class="bd-example">
 {{media_bis_example}}
 </div>
 {% highlight html %}
@@ -231,7 +231,7 @@ doc-subtab: media-object
   </div>
 </article>
 {% endcapture %}
-<div class="example">
+<div class="bd-example">
 {{media_nested_example}}
 </div>
 {% highlight html %}
