--- a/docs/documentation/components/nav.html
+++ b/docs/documentation/components/nav.html
@@ -118,7 +118,7 @@ doc-subtab: nav
 </nav>
 {% endcapture %}
 
-<div class="example is-paddingless">
+<div class="bd-example is-paddingless">
 {{nav_example}}
 </div>
 
@@ -176,7 +176,7 @@ doc-subtab: nav
 </nav>
 {% endcapture %}
 
-<div class="example is-paddingless">
+<div class="bd-example is-paddingless">
 {{nav_tabs_example}}
 </div>
 
