--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -62,7 +62,7 @@ variables:
 {% include subnav-components.html %}
 
 {% capture navbar_example %}
-{% include navbar.html id="Example" %}
+{% include navbar.html id="bd-example" %}
 {% endcapture %}
 
 {% capture navbar_brand_example %}
@@ -591,7 +591,7 @@ document.addEventListener('DOMContentLoaded', function () {
       </ul>
     </div>
 
-    <div class="example is-paddingless">
+    <div class="bd-example is-paddingless">
       {{navbar_example}}
     </div>
 
@@ -621,7 +621,7 @@ document.addEventListener('DOMContentLoaded', function () {
       </p>
     </div>
 
-    <div class="example is-paddingless">
+    <div class="bd-example is-paddingless">
       {{navbar_brand_items_example}}
     </div>
 
@@ -641,7 +641,7 @@ document.addEventListener('DOMContentLoaded', function () {
       </p>
     </div>
 
-    <div class="example is-paddingless">
+    <div class="bd-example is-paddingless">
       <div class="navbar-burger" style="display: flex;">
         <span></span>
         <span></span>
@@ -657,7 +657,7 @@ document.addEventListener('DOMContentLoaded', function () {
       </p>
     </div>
 
-    <div class="example is-paddingless">
+    <div class="bd-example is-paddingless">
       <div class="navbar-burger is-active" style="display: flex;">
         <span></span>
         <span></span>
@@ -798,7 +798,7 @@ document.addEventListener('DOMContentLoaded', function () {
       </p>
     </div>
 
-    <div class="example is-paddingless">
+    <div class="bd-example is-paddingless">
       {{navbar_transparent_example}}
     </div>
 
@@ -825,7 +825,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <div class="columns">
       <div class="column">
-        <div class="example is-paddingless">
+        <div class="bd-example is-paddingless">
           {{ navbar_dropdown_example }}
         </div>
       </div>
@@ -866,7 +866,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <div class="columns">
       <div class="column">
-        <div class="example is-paddingless">
+        <div class="bd-example is-paddingless">
           {{ navbar_dropdown_hover_example }}
         </div>
       </div>
@@ -880,7 +880,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <div class="columns">
       <div class="column">
-        <div class="example is-paddingless">
+        <div class="bd-example is-paddingless">
           {{ navbar_dropdown_active_example }}
         </div>
       </div>
@@ -905,7 +905,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <div class="columns">
       <div class="column">
-        <div class="example is-paddingless">
+        <div class="bd-example is-paddingless">
           {{ navbar_dropdown_right_example }}
         </div>
       </div>
@@ -935,7 +935,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <div class="columns">
       <div class="column">
-        <div class="example is-paddingless">
+        <div class="bd-example is-paddingless">
           {{ navbar_dropdown_default_example }}
         </div>
       </div>
@@ -967,7 +967,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <div class="columns">
       <div class="column">
-        <div class="example is-paddingless">
+        <div class="bd-example is-paddingless">
           {{ navbar_dropdown_boxed_example }}
         </div>
       </div>
@@ -983,7 +983,7 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <div class="columns">
       <div class="column">
-        <div class="example is-paddingless">
+        <div class="bd-example is-paddingless">
           {{ navbar_dropdown_item_active_example }}
         </div>
       </div>
