--- a/docs/documentation/components/pagination.html
+++ b/docs/documentation/components/pagination.html
@@ -209,7 +209,7 @@ variables:
       </p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{pagination_example}}
     </div>
 
@@ -221,7 +221,7 @@ variables:
       </p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{pagination_options_example}}
     </div>
 
@@ -233,13 +233,13 @@ variables:
       </p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{pagination_centered_example}}
     </div>
 
     {% highlight html %}{{pagination_centered_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{pagination_right_example}}
     </div>
 
@@ -256,15 +256,15 @@ variables:
       You only need to append the <strong>modifier</strong> <code>is-small</code>, <code>is-medium</code>, or <code>is-large</code> to the <code>pagination</code> component.
     </p>
 
-    <div class="example">
+    <div class="bd-example">
       {{pagination_small_example}}
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{pagination_medium_example}}
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{pagination_large_example}}
     </div>
 
