--- a/docs/documentation/components/tabs.html
+++ b/docs/documentation/components/tabs.html
@@ -382,7 +382,7 @@ variables:
         The <strong>default</strong> tabs style has a single border at the bottom.</p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_example}}
     </div>
     {% highlight html %}{{tabs_example}}{% endhighlight %}
@@ -396,12 +396,12 @@ variables:
       </p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_centered_example}}
     </div>
     {% highlight html %}{{tabs_centered_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_right_example}}
     </div>
     {% highlight html %}{{tabs_right_example}}{% endhighlight %}
@@ -413,7 +413,7 @@ variables:
       <p>You can use any of the <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a> <strong>icons</strong>.</p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_icons_example}}
     </div>
     {% highlight html %}{{tabs_icons_example}}{% endhighlight %}
@@ -423,17 +423,17 @@ variables:
       <p>You can choose between <strong>3 additional sizes</strong>: <code>is-small</code> <code>is-medium</code> and <code>is-large</code>.</p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_small_example}}
     </div>
     {% highlight html %}{{tabs_small_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_medium_example}}
     </div>
     {% highlight html %}{{tabs_medium_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_large_example}}
     </div>
     {% highlight html %}{{tabs_large_example}}{% endhighlight %}
@@ -445,7 +445,7 @@ variables:
       If you want a more classic style with <strong>borders</strong>, just append the <code>is-boxed</code> modifier.
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_boxed_example}}
     </div>
     {% highlight html %}{{tabs_boxed_example}}{% endhighlight %}
@@ -454,7 +454,7 @@ variables:
       If you want <strong>mutually exclusive</strong> tabs (like radio buttons where clicking one deselects all other ones), use the <code>is-toggle</code> modifier.
     </p>
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_toggle_example}}
     </div>
     {% highlight html %}{{tabs_toggle_example}}{% endhighlight %}
@@ -463,7 +463,7 @@ variables:
       If you want the tabs to take up the <strong>whole width</strong> available, use <code>is-fullwidth</code>.
     </p>
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_fullwidth_example}}
     </div>
     {% highlight html %}{{tabs_fullwidth_example}}{% endhighlight %}
@@ -475,22 +475,22 @@ variables:
       <p>You can <strong>combine</strong> different modifiers. For example, you can have <strong>centered boxed</strong> tabs, or <strong>fullwidth toggle</strong> ones.</p>
     </div>
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_centered_boxed_example}}
     </div>
     {% highlight html %}{{tabs_centered_boxed_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_toggle_fullwidth_example}}
     </div>
     {% highlight html %}{{tabs_toggle_fullwidth_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_centered_boxed_medium_example}}
     </div>
     {% highlight html %}{{tabs_centered_boxed_medium_example}}{% endhighlight %}
 
-    <div class="example">
+    <div class="bd-example">
       {{tabs_toggle_fullwidth_large_example}}
     </div>
     {% highlight html %}{{tabs_toggle_fullwidth_large_example}}{% endhighlight %}
