--- a/docs/documentation/layout/container.html
+++ b/docs/documentation/layout/container.html
@@ -73,7 +73,7 @@ doc-subtab: container
   </div>
 </section>
 
-<div class="example is-fullwidth">
+<div class="bd-example is-fullwidth">
   {{container_example}}
 </div>
 
@@ -88,7 +88,7 @@ doc-subtab: container
 </div>
 </section>
 
-<div class="example is-fullwidth">
+<div class="bd-example is-fullwidth">
   {{container_fluid_example}}
 </div>
 
@@ -109,13 +109,13 @@ doc-subtab: container
 </div>
 </section>
 
-<div class="example is-fullwidth">
+<div class="bd-example is-fullwidth">
   {{container_widescreen_example}}
 </div>
 
 {% highlight html %}{{container_widescreen_example}}{% endhighlight %}
 
-<div class="example is-fullwidth">
+<div class="bd-example is-fullwidth">
   {{container_fullhd_example}}
 </div>
 
