--- a/docs/documentation/layout/footer.html
+++ b/docs/documentation/layout/footer.html
@@ -14,7 +14,7 @@ doc-subtab: footer
       A simple responsive <strong>footer</strong> which can include anything: lists, headings, columns, icons, buttons, etc.
     </h2>
 
-<div class="example">
+<div class="bd-example">
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
