--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -17,7 +17,7 @@ doc-subtab: hero
 </section>
 
 <section class="section is-fullwidth">
-  <div class="example">
+  <div class="bd-example">
     <section class="hero">
       <div class="hero-body">
         <div class="container">
@@ -58,7 +58,7 @@ doc-subtab: hero
 </section>
 
 <section class="section is-fullwidth">
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-primary">
       <div class="hero-body">
         <div class="container">
@@ -88,7 +88,7 @@ doc-subtab: hero
 </section>
 {% endhighlight %}
 
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-info">
       <div class="hero-body">
         <div class="container">
@@ -103,7 +103,7 @@ doc-subtab: hero
     </section>
   </div>
 
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-success">
       <div class="hero-body">
         <div class="container">
@@ -118,7 +118,7 @@ doc-subtab: hero
     </section>
   </div>
 
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-warning">
       <div class="hero-body">
         <div class="container">
@@ -133,7 +133,7 @@ doc-subtab: hero
     </section>
   </div>
 
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-danger">
       <div class="hero-body">
         <div class="container">
@@ -148,7 +148,7 @@ doc-subtab: hero
     </section>
   </div>
 
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-light">
       <div class="hero-body">
         <div class="container">
@@ -163,7 +163,7 @@ doc-subtab: hero
     </section>
   </div>
 
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-dark">
       <div class="hero-body">
         <div class="container">
@@ -192,7 +192,7 @@ doc-subtab: hero
 </section>
 
 <section class="section is-fullwidth">
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-medium is-primary is-bold">
       <div class="hero-body">
         <div class="container">
@@ -220,7 +220,7 @@ doc-subtab: hero
   </div>
 </section>
 {% endhighlight %}
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-medium is-info is-bold">
       <div class="hero-body">
         <div class="container">
@@ -234,7 +234,7 @@ doc-subtab: hero
       </div>
     </section>
   </div>
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-medium is-success is-bold">
       <div class="hero-body">
         <div class="container">
@@ -248,7 +248,7 @@ doc-subtab: hero
       </div>
     </section>
   </div>
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-medium is-warning is-bold">
       <div class="hero-body">
         <div class="container">
@@ -262,7 +262,7 @@ doc-subtab: hero
       </div>
     </section>
   </div>
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-medium is-danger is-bold">
       <div class="hero-body">
         <div class="container">
@@ -276,7 +276,7 @@ doc-subtab: hero
       </div>
     </section>
   </div>
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-medium is-light is-bold">
       <div class="hero-body">
         <div class="container">
@@ -290,7 +290,7 @@ doc-subtab: hero
       </div>
     </section>
   </div>
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-medium is-dark is-bold">
       <div class="hero-body">
         <div class="container">
@@ -316,7 +316,7 @@ doc-subtab: hero
 </section>
 
 <section class="section is-fullwidth">
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-primary is-medium">
       <div class="hero-body">
         <div class="container">
@@ -346,7 +346,7 @@ doc-subtab: hero
 </section>
 {% endhighlight %}
 
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-info is-large">
       <div class="hero-body">
         <div class="container">
@@ -376,7 +376,7 @@ doc-subtab: hero
 </section>
 {% endhighlight %}
 
-  <div class="example is-fullwidth">
+  <div class="bd-example is-fullwidth">
     <section class="hero is-success is-fullheight">
       <div class="hero-body">
         <div class="container">
@@ -428,7 +428,7 @@ doc-subtab: hero
 </section>
 
 <section class="section is-fullwidth">
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-primary is-medium">
       <div class="hero-head">
         <header class="nav">
@@ -575,7 +575,7 @@ doc-subtab: hero
 </section>
 {% endhighlight %}
 
-  <div class="example">
+  <div class="bd-example">
     <section class="hero is-info is-large">
       <div class="hero-head">
         <header class="nav">
@@ -722,7 +722,7 @@ doc-subtab: hero
 </section>
 {% endhighlight %}
 
-  <div class="example is-fullwidth">
+  <div class="bd-example is-fullwidth">
     <section class="hero is-success is-fullheight">
       <div class="hero-head">
         <header class="nav">
