--- a/docs/_includes/blog-hero.html
+++ b/docs/_includes/blog-hero.html
@@ -13,7 +13,7 @@
           <p class="subtitle">
             Stay updated about new features, bug fixes, and releases
           </p>
-          <a class="button is-rss" href="{{ site.url }}/atom.xml">
+          <a class="button bd-is-rss" href="{{ site.url }}/atom.xml">
             <span class="icon">
               <i class="fa fa-rss"></i>
             </span>
