--- a/docs/_includes/color/black-bis.html
+++ b/docs/_includes/color/black-bis.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(0, 0%, 7%);"></span>
+<span class="bd-color" style="background: hsl(0, 0%, 7%);"></span>
 <code>hsl(0, 0%, 7%)</code>
