--- a/docs/_includes/color/black-ter.html
+++ b/docs/_includes/color/black-ter.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(0, 0%, 14%);"></span>
+<span class="bd-color" style="background: hsl(0, 0%, 14%);"></span>
 <code>hsl(0, 0%, 14%)</code>
