--- a/docs/_includes/color/blue.html
+++ b/docs/_includes/color/blue.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(217, 71%,  53%);"></span>
+<span class="bd-color" style="background: hsl(217, 71%,  53%);"></span>
 <code>hsl(217, 71%,  53%)</code>
