--- a/docs/_includes/color/green.html
+++ b/docs/_includes/color/green.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(141, 71%,  48%);"></span>
+<span class="bd-color" style="background: hsl(141, 71%,  48%);"></span>
 <code>hsl(141, 71%,  48%)</code>
