--- a/docs/_includes/color/grey-light.html
+++ b/docs/_includes/color/grey-light.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(0, 0%, 71%);"></span>
+<span class="bd-color" style="background: hsl(0, 0%, 71%);"></span>
 <code>hsl(0, 0%, 71%)</code>
