--- a/docs/_includes/color/grey-lighter.html
+++ b/docs/_includes/color/grey-lighter.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(0, 0%, 86%);"></span>
+<span class="bd-color" style="background: hsl(0, 0%, 86%);"></span>
 <code>hsl(0, 0%, 86%)</code>
