--- a/docs/_includes/color/grey.html
+++ b/docs/_includes/color/grey.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(0, 0%, 48%);"></span>
+<span class="bd-color" style="background: hsl(0, 0%, 48%);"></span>
 <code>hsl(0, 0%, 48%)</code>
