--- a/docs/_includes/color/orange.html
+++ b/docs/_includes/color/orange.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(14,  100%, 53%);"></span>
+<span class="bd-color" style="background: hsl(14,  100%, 53%);"></span>
 <code>hsl(14,  100%, 53%)</code>
