--- a/docs/_includes/color/purple.html
+++ b/docs/_includes/color/purple.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(271, 100%, 71%);"></span>
+<span class="bd-color" style="background: hsl(271, 100%, 71%);"></span>
 <code>hsl(271, 100%, 71%)</code>
