--- a/docs/_includes/color/white-ter.html
+++ b/docs/_includes/color/white-ter.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(0, 0%, 96%);"></span>
+<span class="bd-color" style="background: hsl(0, 0%, 96%);"></span>
 <code>hsl(0, 0%, 96%)</code>
