--- a/docs/_includes/color/white.html
+++ b/docs/_includes/color/white.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(0, 0%, 100%);"></span>
+<span class="bd-color" style="background: hsl(0, 0%, 100%);"></span>
 <code>hsl(0, 0%, 100%)</code>
