--- a/docs/_includes/color/yellow.html
+++ b/docs/_includes/color/yellow.html
@@ -1,2 +1,2 @@
-<span class="color" style="background: hsl(48,  100%, 67%);"></span>
+<span class="bd-color" style="background: hsl(48,  100%, 67%);"></span>
 <code>hsl(48,  100%, 67%)</code>
