--- a/docs/_includes/elements/tw-button.html
+++ b/docs/_includes/elements/tw-button.html
@@ -1,4 +1,4 @@
-<a class="tw-button button"
+<a class="bd-tw-button button"
   data-social-network="Twitter"
   data-social-action="tweet"
   data-social-target="{{ site.url }}"
