--- a/docs/_includes/heading.html
+++ b/docs/_includes/heading.html
@@ -1,8 +1,8 @@
 <hr style="margin-bottom: 0;">
 
-<h3 id="{{ include.name | slugify }}" class="title anchor-title">
+<h3 id="{{ include.name | slugify }}" class="title bd-anchor-title">
   {{ include.name }}
-  <a class="anchor-link" href="#{{ include.name | slugify }}">
+  <a class="bd-anchor-link" href="#{{ include.name | slugify }}">
     #
   </a>
 </h3>
