--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -9,24 +9,24 @@ route: blog
   <div class="container">
     <div class="columns">
       <div class="column is-offset-2 is-8">
-        <div class="article-image is-single is-{{ page.color }}">
-          <span class="article-overlay"></span>
-          <span class="article-icon">
+        <div class="bd-article-image is-single is-{{ page.color }}">
+          <span class="bd-article-overlay"></span>
+          <span class="bd-article-icon">
             <i class="fa fa-{{ page.icon }}"></i>
           </span>
-          <strong class="article-info">
+          <strong class="bd-article-info">
             <span>
-              <time class="article-date" datetime="{{ page.date | date_to_xmlschema }}">
+              <time class="bd-article-date" datetime="{{ page.date | date_to_xmlschema }}">
                 {{ page.date | date_to_string }}
               </time>
-              <strong class="article-title">
+              <strong class="bd-article-title">
                 {{ page.name }}
               </strong>
             </span>
           </strong>
         </div>
         <p class="subtitle is-6">
-          <a class="article-back" href="{{ site.url }}/blog">Back</a>
+          <a class="bd-article-back" href="{{ site.url }}/blog">Back</a>
         </p>
         <h1 class="title is-2">
           {{ page.title }}
